update 2 - add user info in post card and add delete button

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html { font-family: 'Inter', sans-serif; }
 }
 /* font */
 * {
-    font-size: 20px;
+    font-size: 16px;
     margin: 0;
     padding: 0;
 }
@@ -30,6 +30,8 @@ body {
     border: 1px solid black;
     min-height: 200px;
     min-width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 /* text */
 
@@ -95,13 +97,13 @@ section {
 .section-profile {
     display: flex;
     align-items: flex-start;
-    min-width: inherit;
 }
 
 /* navigasi */
 .navigation {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
+
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     height: 1em;
     padding-top: 15px;
@@ -116,9 +118,9 @@ section {
 }
 
 .navigation ul {
+    display: flex;
+    flex-direction: row;
     list-style: none;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -135,11 +137,15 @@ section {
 .login-card {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     background-color: #41EAD4;
     border: 1px solid black;
-    padding: 2em;
-    justify-content: center;
+    padding: 20px;
+    justify-content: space-evenly;
+}
+
+.login {
+    display: flex;
 }
 
 .posting-form {
@@ -181,29 +187,29 @@ section {
     min-width: 30%;
 }
 .post-text-placeholder {
-    width: 70%
-
+    width: 70%;
+    margin-bottom: 2rem;
 }
 
 input[type=text] {
-    width: 100%;
     border: 1px solid black;
     margin: 4px;
     padding: 10px;
 }
 
 input[type=password] {
-    width: 100%;
     display: block;
     border: 1px solid black;
     margin: 4px;
     padding: 10px;
 }
 
+
 button {
     width: 200px;
     display: inline;
     padding: 10px;
+    margin: 4px;
 
 
     color: black;
@@ -220,11 +226,18 @@ button {
 
 div {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
 }
 
+.v-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+
 .h-div {
-    margin-top: 0.5em;
+    margin-top: 1em;
     margin-bottom: 0.5em;
     display: flex;
     flex-direction: row;
@@ -233,9 +246,27 @@ div {
     align-items: flex-start;
 }
 
+.user-info {
+    justify-content: flex-start;
+}
+
+.delete-button {
+    margin-top: 2rem;
+    align-self: flex-end;
+    background-color: #FF206E;
+    color: white;
+}
 p {
-    max-width: 70%;
     padding: 0.5rem;
+    display: inline;
+}
+
+.name {
+    font-weight: 800;
+}
+
+.username {
+    font-style: italic;
 }
 
 img {
