--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     min-width: 100%;
     display: flex;
     flex-direction: column;
+    padding: 20px;
 }
 /* text */
 
@@ -95,8 +96,12 @@ section {
     grid-column-end: span 1;
 }
 .section-profile {
-    display: flex;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: 2fr;
+    max-height: 250px;
+    align-items: center;
+    /* display: flex;
+    align-items: flex-start; */
 }
 
 /* navigasi */
@@ -219,6 +224,10 @@ button {
 
 }
 
+button:active {
+    background-color: #a7c957;
+}
+
 .join-btn {
     background-color: #FF206E;
     color: white
@@ -233,6 +242,10 @@ div {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.profile-card > .v-div {
+    min-width: 80%;
 }
 
 
@@ -274,3 +287,16 @@ img {
     height: 200px;
     object-fit:cover;
 }
+
+  .sort-button-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+.sort-button-container button {
+    background-color: white;
+    border: 1px solid grey;
+}
+  .sort-button-container button:active {
+    background-color: #41EAD4;
+  }
