--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ section {
     margin-top: 1em;
     margin-bottom: 1em;
     display: flex;
+    justify-content: space-around;
     flex-direction: row-reverse;
 }
 .post-photo-placeholder {
@@ -245,7 +246,7 @@ button:active {
 
 div {
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
 }
 
 .v-div {
